[package]
name = "tasks"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
comfy-table = "6.1.4"
ssh2 = "0.9.4"
confy = "0.5.1"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
