[package]
name = "task"
version = "1.4.0"
edition = "2021"
author = "Val jed. vjeudy@protonmail.com"
about = "Tiny tasks CLI in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
comfy-table = "6.1.4"
ssh2 = "0.9.4"
confy = "0.5.1"
terminal_size = "0.3.0"
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.4.4"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
